extras/weave-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: weave-scope
    name: weave-scope-app
    weave-cloud-component: scope
    weave-scope-component: app
  name: weave-scope-app
  namespace: weave
spec:
  ports:
  - name: sapp
    port: 443
    protocol: TCP
    targetPort: 4040
  - name: app
    port: 80
    protocol: TCP
    targetPort: 4040
  selector:
    app: weave-scope
    name: weave-scope-app
    weave-cloud-component: scope
    weave-scope-component: app
  sessionAffinity: None
  type: ClusterIP
