extras/zipkin.yaml
# Copyright 2017 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

##################################################################################################
# Zipkin
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  labels:
    app: jaeger
spec:
  ports:
  - name: http
    port: 9411
    protocol: TCP
    targetPort: 9411
  selector:
    app: jaeger
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zipkin
  labels:
    app: jaeger
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
      - name: zipkin
        image: openzipkin/zipkin
#        command: ["/bin/sleep","infinity"]
        imagePullPolicy: IfNotPresent
---
