extras/dockerio-egress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: dockerio
spec:
  hosts:
  - www.docker.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: dockerio
spec:
  hosts:
  - www.docker.cpom
  tls:
  - match:
    - port: 443
      sni_hosts:
      - www.docker.com
    route:
    - destination:
        host: www.docker.com
        port:
          number: 443
      weight: 100
