extras/weave-gw-vsvc.yaml
##################################################################################################
# Weave GW and VSVC
##################################################################################################
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: weave-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "weave.aws.atu.de"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: weave-vsvc
spec:
  hosts:
  - "weave.aws.atu.de"
  gateways:
  - weave-gateway
  http:
  - route:
    - destination:
        host: weave-scope-app
        port:
          number: 80
